# rust-sgx

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  Cargo.toml  Jenkinsfile  README.md  Ubuntu-22.04 LTS setup  build-release-artifacts.py  build_eif.sh  crate-publish-config.sh  install_build_deps.sh  rust-toolchain  rust-toolchain.toml
FortanixVME/: Cargo.toml  ci-common.sh  ci-fortanixvme.sh
FortanixVME/compilation-tools/: Dockerfile  build.sh  fortanixvme_toolchain.sh  musl_toolchain.sh
FortanixVME/enclave-runner/: Cargo.toml  build.sh
FortanixVME/enclave-runner/src/: main.rs  server.rs
FortanixVME/enclave-runner/tests/: enclave-runner.rs
FortanixVME/fortanix-vme-abi/: Cargo.toml
FortanixVME/fortanix-vme-abi/src/: lib.rs
FortanixVME/tests/incoming_connection/: out.expected  run.sh  test_interaction.sh
FortanixVME/tests/mbedtls-genrsa/: Cargo.toml
FortanixVME/tests/outgoing_connection/: Cargo.toml
FortanixVME/tests/tcp_connection/: Cargo.toml
IntelSGX/: Cargo.toml  README.md
IntelSGX/dcap-ql-sys/src/: lib.rs
IntelSGX/dcap-retrieve-pckid/: README.md
IntelSGX/doc/: FORTANIX-SGX-ABI.md  FORTANIX-SGX-ELF.md  GUIDE.md  WINTEL-SGX-ABI.md  rust-std-edp-doc.patch
IntelSGX/em-app/: Cargo.toml  build-sgx.sh
IntelSGX/em-app/src/: mbedtls_hyper.rs
IntelSGX/examples/backtrace_panic/: test.sh
IntelSGX/examples/mpsc-crypto-mining/: LICENSE  readme.md
IntelSGX/examples/tls/: Cargo.toml
IntelSGX/examples/unit_tests/: Cargo.toml
IntelSGX/examples/usercall-extension-bind/: test.sh
IntelSGX/ipc-queue/src/: lib.rs
IntelSGX/report-test/: README.md
IntelSGX/report-test/enclave/: .gitignore
IntelSGX/report-test/src/: lib.rs
IntelSGX/rs-libc/: LICENSE  README.md
IntelSGX/rs-libc/src/: alloc.rs  lib.rs
IntelSGX/scripts/: stack-trace-resolve  stack-trace-resolve.txt
IntelSGX/sgx-isa/: Cargo.toml
IntelSGX/sgx-pkix/src/: attestation.rs  error.rs
IntelSGX/sgxs/: Cargo.toml
IntelSGX/sgxs-loaders/: Cargo.toml
IntelSGX/sgxs-loaders/tests/: .gitignore
IntelSGX/sgxs-tools/: Cargo.toml
IntelSGX/sgxs/src/: lib.rs  sgxs.rs
aesm-client/: Cargo.toml  build.rs
aesm-client/src/: error.rs  lib.rs
aesm-client/src/imp/: sgx.rs  unix.rs  windows.rs
aesm-client/tests/: live_quote.rs
alloc_buddy_simple/: Cargo.toml  README.md
alloc_buddy_simple/src/: heap.rs  integration.rs  lib.rs  math.rs  spin.rs
async-queues/: Cargo.toml
async-queues/src/: lib.rs
dcap-provider/: Cargo.toml  README.md
dcap-provider/src/: lib.rs  ql.rs
dcap-ql/: Cargo.toml  README.md
dcap-ql-sys/: Cargo.toml  build.rs
dcap-ql-sys/src/: lib.rs
dcap-ql/src/: dl.rs  lib.rs  quote.rs
dcap-ql/src/bindings/: dl.rs  mod.rs
dcap-ql/tests/: corrupt_qe3_identity.json  live_quote.rs  processor_ca.cert  qe3_identity.json  root_ca.cert
em-app/: Cargo.toml  README.md  build-nitro.sh
em-app/examples/client/: Cargo.toml
em-app/examples/get-certificate/: Cargo.toml  README.md  build-sgx.sh
em-app/examples/harmonize/: Cargo.toml  README.md
em-app/examples/scripts/: em_curl.sh  register_and_run.sh
em-app/examples/server/: Cargo.toml
em-app/src/: csr.rs  error.rs  lib.rs  mbedtls_hyper.rs  utils.rs
em-app/src/platform/: mod.rs  (+2 more)
enclave-example/: COPYING  Cargo.toml  README.md  le.signed.sgxs  le.signed.sig  run.sh
enclave-example/trusted/: Cargo.toml
enclave-example/untrusted/: Cargo.toml
enclave-example/usercalls/: Cargo.toml
enclave-interface/: Cargo.toml  README.md
enclave-interface/src/: debug.rs  lib.rs  tcs.rs  util.rs
enclave-runner/: Cargo.toml  build.rs
enclave-runner/fake-vdso/: .gitignore
enclave-runner/src/: builder.rs  command.rs  dummy.key  lib.rs  library.rs  loader.rs  tcs.rs
fortanix-sgx-abi/: Cargo.toml
fortanix-sgx-abi/src/: lib.rs  tcsls.rs
fortanix-sgx-tools/: Cargo.toml  README.md
fortanix-vme/: Cargo.toml  ci-common.sh  ci-fortanixvme.sh
fortanix-vme/eif-tools/: Cargo.toml
fortanix-vme/enclave-runner/: Cargo.toml
fortanix-vme/fortanix-vme-abi/: Cargo.toml  build.rs
fortanix-vme/fortanix-vme-eif/: .gitignore  Cargo.toml  build.rs
fortanix-vme/fortanix-vme-initramfs/: Cargo.toml
fortanix-vme/fortanix-vme-runner/: Cargo.toml  tree.txt
fortanix-vme/fortanix-vme-tools/: .gitignore  Cargo.toml  build.rs
fortanix-vme/nitro-attestation-verify/: Cargo.toml
fortanix-vme/nsm/: Cargo.toml
fortanix-vme/vme-pkix/: Cargo.toml
insecure-time/: Cargo.toml
insecure-time/src/: lib.rs  main.rs
ipc-queue/: Cargo.toml
ipc-queue/src/: fifo.rs  interface_async.rs  interface_sync.rs  lib.rs  position.rs  sealed.rs  test_support.rs
libenclave/: COPYING  Cargo.toml  README.md  build.rs  gprsgx.c
libenclave-tools/: COPYING  COPYING-AGPL  Cargo.toml  README.md
libenclave-tools/src/: cargo-build-enclave.rs  elf2sgxs.rs  enclave.map  entry.S  exec.rs  link-sgxs.rs  naming.rs  num.rs
libenclave/src/: alloc.rs  curve25519.rs  debug.rs  entry.S  lib.rs  mem.rs  panic.rs  rand.rs  reloc.rs  sgx.rs  thread.rs  usercall.rs
native-tls-ext/: Cargo.toml
native-tls-ext/src/: lib.rs
pkix/: Cargo.toml
pkix/examples/: fakecert.rs  fakecsr.rs  parsecert.rs
pkix/src/: algorithms.rs  cms.rs  derives.rs  deserialize.rs  lib.rs  oid.rs  pem.rs  pkcs10.rs  serialize.rs  types.rs  x509.rs
pkix/tests/: fakes.rs
report-test/: Cargo.toml
report-test/enclave/: Makefile  report.sgxs
report-test/src/: lib.rs
rs-libc/: Cargo.toml  LICENSE  README.md  build.rs
rs-libc/src/: alloc.rs  lib.rs
sgx-isa/: COPYING-APACHE  COPYING-MIT  Cargo.toml
sgx-isa/src/: arch.rs  large_array_impl.rs  lib.rs
sgx-isa/tests/: report_mac.rs
sgx-pkix/: Cargo.toml
sgx-pkix/src/: attestation.rs  error.rs  lib.rs  oid.rs  pkcs10.rs
sgx-quote/: Cargo.toml
sgx-quote/src/: lib.rs
sgxs/: COPYING  Cargo.toml  README.md
sgxs-loaders/: Cargo.toml
sgxs-loaders/src/: generic.rs  lib.rs
sgxs-loaders/tests/: test_linux_drivers.sh
sgxs-tools/: COPYING  Cargo.toml  README.md
sgxs-tools/tests/: sgx-detect.rs
sgxs/src/: abi.rs  einittoken.rs  intelcall.rs  lib.rs  loader.rs  sgxs.rs  sigstruct.rs  util.rs
(+601 files in other folders)
