[workspace]
members = [
    "em-app",
    "em-app/examples/get-certificate",
    "enclave-runner",
    "examples/mem-alloc-test",
    "examples/mem-correctness-test",
    "fortanix-vme/aws-nitro-enclaves/aws-nitro-blobs",
    "fortanix-vme/aws-nitro-enclaves/eif-tools",
    "fortanix-vme/aws-nitro-enclaves/nitro-attestation-verify",
    "fortanix-vme/aws-nitro-enclaves/nsm",
    "fortanix-vme/aws-nitro-enclaves/tests/nsm-test",
    "fortanix-vme/fortanix-vme-abi",
    "fortanix-vme/fortanix-vme-eif",
    "fortanix-vme/fortanix-vme-initramfs",
    "fortanix-vme/fortanix-vme-runner",
    "fortanix-vme/fortanix-vme-tools",
    "fortanix-vme/tools/confidential-vm-blobs",
    "fortanix-vme/tools/elf2uki",
    "fortanix-vme/vme-pkix",
    "intel-sgx/aesm-client",
    "intel-sgx/async-usercalls",
    "intel-sgx/dcap-artifact-retrieval",
    "intel-sgx/dcap-provider",
    "intel-sgx/dcap-ql-sys",
    "intel-sgx/dcap-ql",
    "intel-sgx/dcap-retrieve-pckid",
    "intel-sgx/enclave-runner-sgx",
    "intel-sgx/fortanix-sgx-abi",
    "intel-sgx/fortanix-sgx-tools",
    "intel-sgx/ias",
    "intel-sgx/insecure-time",
    "intel-sgx/pcs",
    "intel-sgx/report-test",
    "intel-sgx/sgx_pkix",
    "intel-sgx/sgx-isa",
    "intel-sgx/sgxs-loaders",
    "intel-sgx/sgxs-tools",
    "intel-sgx/sgxs",
    "intel-tdx/tdx-isa",
    "ipc-queue",
    "memory-layout",
    "rs-libc",
]
exclude = [
    "examples/backtrace_panic",
    "examples/mpsc-crypto-mining",
    "examples/tls",
    "examples/unit_tests",
    "examples/usercall-extension-bind/app",
    "examples/usercall-extension-bind/runner",
    "examples/usercall-extension/app",
    "examples/usercall-extension/runner",
    "intel-sgx/sgxs-loaders/tests/driver-crawler",
]
resolver = "2"

[patch.crates-io]
rustc-serialize = { git = "https://github.com/fortanix/rustc-serialize.git", branch = "portability" }
serde = { git = "https://github.com/fortanix/serde.git", branch = "master" }
