[workspace]
members = [
    "enclave-runner",
    "fortanix-vme-abi",
    "tests/outgoing_connection",
    "tests/incoming_connection",
]

[patch.crates-io]
libc = { git = "https://github.com/fortanix/libc.git", branch = "fortanixvme" }
serde = { git = "https://github.com/raoulstrackx/serde.git", branch = "raoul/stdlib" }
serde_cbor = { git = "https://github.com/raoulstrackx/cbor.git", branch = "raoul/stdlib" }
