[package]
name = "async-queues"
version = "0.1.0"
authors = ["Parth Sane <parthsane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fortanix-sgx-abi = { version = "0.3.0", path = "../fortanix-sgx-abi" }

