[package]
name = "dcap-ql"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
Idiomatic Rust bindings for libsgx_dcap_ql.

SGX: Software Guard Extensions
DCAP: DataCenter Attestation Primitives
QL: Quoting Library
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/api/dcap_ql/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "dcap", "quote"]
categories = ["api-bindings"]
autotests = true

[[test]]
name = "live_quote"
required-features = ["test-sgx-flc"]

[features]
# If set, will link to libsgx_dcap_ql. Otherwise, will use the dynamic loader
# to access the library at runtime.
link = ["dcap-ql-sys/link"]
# Enable tests that can only be run on an SGX-enabled environment with FLC
test-sgx-flc = []

[dependencies]
# Project dependencies
"dcap-ql-sys" = { version = "0.1.0", path = "../dcap-ql-sys" }
"sgxs-loaders" = { version = "0.1.0", path = "../sgxs-loaders" }
"sgx-isa" = { version = "0.3.0", path = "../sgx-isa" }

# External dependencies
byteorder = "1.1.0" # Unlicense/MIT
failure = "0.1.1"   # MIT/Apache-2.0
lazy_static = "1"   # MIT/Apache-2.0
libc = "0.2"        # MIT/Apache-2.0
num-derive = "0.2"  # MIT/Apache-2.0
num-traits = "0.2"  # MIT/Apache-2.0

[dev-dependencies]
"report-test" = { version = "0.1.0", path = "../report-test" }
"sgxs" = { version = "0.6.0", path = "../sgxs" }
