[package]
name = "dcap-ql"
version = "0.3.1"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
Idiomatic Rust bindings for libsgx_dcap_ql.

SGX: Software Guard Extensions
DCAP: DataCenter Attestation Primitives
QL: Quoting Library
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/api/dcap_ql/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "dcap", "quote"]
categories = ["api-bindings"]
autotests = true

[[test]]
name = "live_quote"
required-features = ["test-sgx-flc"]

[features]
default = ["bindings"]
# If set, will provide bindings to libsgx_dcap_ql. Otherwise, you just get the
# DCAP types.
bindings = ["dcap-ql-sys", "sgxs-loaders", "libc"]
# If set, will link to libsgx_dcap_ql. Otherwise, will use the dynamic loader
# to access the library at runtime.
link = ["dcap-ql-sys/link", "bindings"]
# Enable tests that can only be run on an SGX-enabled environment with FLC
test-sgx-flc = ["bindings"]
# Add the ability to verify quotes
verify = ["mbedtls", "num", "yasna"]

[dependencies]
# Project dependencies
"dcap-ql-sys" = { version = "0.2.0", path = "../dcap-ql-sys", optional = true }
"sgxs-loaders" = { version = "0.3.0", path = "../sgxs-loaders", optional = true }
"sgx-isa" = { version = "0.3.0", path = "../sgx-isa" }

# External dependencies
byteorder = "1.1.0" # Unlicense/MIT
failure = "0.1.1"   # MIT/Apache-2.0
lazy_static = "1"   # MIT/Apache-2.0
libc = { version = "0.2", optional = true }        # MIT/Apache-2.0
"mbedtls" = { version = "0.6.0", default-features = false, optional = true }
num = { version = "0.2", optional = true }
num-derive = "0.2"  # MIT/Apache-2.0
num-traits = "0.2"  # MIT/Apache-2.0
serde = { version = "1.0.104", features = ["derive"], optional = true } # MIT/Apache-2.0
yasna = { version = "0.3", features = ["num-bigint", "bit-vec"], optional = true }

[dev-dependencies]
"mbedtls" = { version = "0.6.0" }
"report-test" = { version = "0.3.1", path = "../report-test" }
"sgxs" = { version = "0.7.0", path = "../sgxs" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0" }
