[workspace]

[package]
name = "em-app"
version = "0.2.2"
authors = ["fortanix.com"]
license = "MPL-2.0"
edition = "2018"
description = "Rust EDP application library for Fortanix Enclave Manager"
repository = "https://github.com/fortanix/rust-sgx"
categories = [ "api-bindings" ]
keywords = [ "sgx" ]

[dependencies]
hyper = { version = "0.10", default-features = false }
mbedtls = { version = "0.12.1", default-features = false, features = ["std", "ssl"] }
b64-ct = "0.1.0"
hex = ">=0.3, <0.5"
serde_bytes = "0.10"
serde_json = "1.0"
sgx-isa = { version="0.3", features=["sgxstd"], default-features=false }

em-node-agent-client = "1.0.0"
sgx_pkix = "0.1.0"
pkix = ">=0.1.1, <0.3.0"
