[package]
name = "em-app"
version = "0.5.0"
authors = ["fortanix.com"]
license = "MPL-2.0"
edition = "2018"
description = "Rust EDP application library for Fortanix Enclave Manager"
repository = "https://github.com/fortanix/rust-sgx"
categories = [ "api-bindings" ]
keywords = [ "sgx" ]

[dependencies]
b64-ct = "0.1.3"
em-client = { version = "4.0.0", default-features = false, features = ["client"] }
em-node-agent-client = "1.0.0"
hyper = { version = "0.10", default-features = false }
mbedtls = { version = "0.13.1", default-features = false, features = ["rdrand", "std", "ssl"] }
pkix = ">=0.1.2, <0.3.0"

rustc-serialize = "0.3.24"
sdkms = { version = "0.3", default-features = false }
serde = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
url = "1"
uuid = { version = "0.6.3", features = ["v4", "serde"] }
uuid_sdkms = { package = "uuid", version = "0.8", features = ["v4", "serde"] }

yasna = { version = "0.3", features = ["num-bigint", "bit-vec"] }

[target.x86_64-fortanix-unknown-sgx.dependencies]
sgx_pkix = { version = "0.2.0", path = "../intel-sgx/sgx_pkix" }
sgx-isa = { version = "0.4", path = "../intel-sgx/sgx-isa", default-features = false }

[target.x86_64-unknown-linux-musl.dependencies]
aws-nitro-enclaves-nsm-api = "0.2.0"
vme-pkix = { version = "0.1.0", path = "../fortanix-vme/vme-pkix/" }

[target.x86_64-unknown-linux-gnu.dependencies]
aws-nitro-enclaves-nsm-api = "0.2.0"
vme-pkix = { version = "0.1.0", path = "../fortanix-vme/vme-pkix/" }

[target.x86_64-unknown-linux-fortanixvme.dependencies]
aws-nitro-enclaves-nsm-api = "0.2.0"
vme-pkix = { version = "0.1.0", path = "../fortanix-vme/vme-pkix/" }
