[package]
name = "enclave-example"
description = "Tools for building and linking enclaves using libenclave"
version = "0.1.0"
authors = ["Jethro Beekman <jethro@jbeekman.nl>"]
license = "GPL-2.0+ AND AGPL-3.0+"
repository = "https://github.com/jethrogb/sgx-utils/tree/master/enclave-example"

[lib]
crate-type = ["staticlib"]
path = "src/trusted/lib.rs"

[[bin]]
name = "enclave-runner"
path = "src/untrusted/main.rs"

[dependencies]
"sgxs" = "0.4.0"
"sgx-isa" = "0.1.0"
# The following two dependencies should always be the same version! The version
# of libenclave-tools you're using to build this crate should also be the same.
"enclave" = "=0.1.0"
"enclave-interface" = "=0.1.0"

[features]
enclave_debug_feature = ["enclave/debug"]
