[package]
name = "enclave-interface"
description = "Interface to interact with libenclave-based secure enclaves"
version = "0.2.0"
authors = ["Jethro Beekman <jethro@jbeekman.nl>"]
license = "GPL-2.0+"
repository = "https://github.com/jethrogb/sgx-utils/tree/master/enclave-interface"

[dependencies]
sgxs = { version = "0.5.0", path = "../sgxs" }
"sgx-isa" = { version = "0.1", path = "../sgx-isa" }
lazy_static = "0.2.0" # MIT
libc = "0.2.10"       # MIT/Apache-2.0
