[package]
name = "enclave-runner"
version = "0.4.1"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
edition = "2018"
description = """
High-level abstractions for running SGX enclaves.

This crate can be used to load and interface with SGX applications compiled for
the `x86_64-fortanix-unknown-sgx` target.
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/api/enclave_runner/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "enclave"]
categories = ["os", "hardware-support"]

[dependencies]
# Project dependencies
sgxs = { version = "0.7.2", path = "../sgxs" }
fortanix-sgx-abi = { version = "0.3.0", path = "../fortanix-sgx-abi" }
sgx-isa = { version = "0.3.0", path = "../sgx-isa" }

# External dependencies
failure = "0.1.1"                               # MIT/Apache-2.0
failure_derive = "0.1.1"                        # MIT/Apache-2.0
fnv = "1"                                       # MIT/Apache-2.0
lazy_static = "1.2.0"                           # MIT/Apache-2.0
libc = "0.2.48"                                 # MIT/Apache-2.0
nix = "0.13.0"                                  # MIT
openssl = { version = "0.10", optional = true } # Apache-2.0
crossbeam = "0.7.1"                             # MIT/Apache-2.0
num_cpus = "1.10.0"                             # MIT/Apache-2.0
tokio = { version = "0.2", features = ["full"] } # MIT
futures = { version = "0.3", features = ["compat", "io-compat"] }

[features]
default = ["crypto-openssl"]
crypto-openssl = ["openssl", "sgxs/crypto-openssl"]
