[package]
name = "enclave-runner"
version = "0.8.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
edition = "2018"
description = """
High-level abstractions for secure enclaves, for any Fortanix EDP target
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/api/enclave_runner/"
homepage = "https://edp.fortanix.com/"
keywords = ["enclave"]
categories = ["os", "hardware-support"]

[dependencies]
# External dependencies
anyhow = "1.0"                                    # MIT/Apache-2.0
lazy_static = "1.5.0"                             # MIT/Apache-2.0
num_cpus = "1.10.0"                               # MIT/Apache-2.0
tokio = { version = "1.35", features = ["full"] } # MIT
pin-project-lite = "0.2.16"                       # MIT/Apache-2.0
futures = { version = "0.3", features = ["compat", "io-compat"] } # MIT/Apache-2.0
