[package]
name = "fortanix-sgx-abi"
version = "0.3.0"
authors = ["Jethro Beekman <jethro@fortanix.com>"]
license = "MPL-2.0"
description = """
An interface for Intel SGX enclaves. This is the interface for the
`x86_64-fortanix-unknown-sgx` target.

This is a small yet functional interface suitable for writing larger enclaves. 
In contrast to other enclave interfaces, this interface is primarly designed 
for running entire applications in an enclave.

This crate fully describes the type-level interface complete with 
documentation. For implementors, this crate contains all the type definitions
and a macro with the function definitions.
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://docs.rs/fortanix-sgx-abi/"
keywords = ["sgx", "enclave"]
categories = ["os"]

[features]
docs = []

[package.metadata.docs.rs]
features = ["docs"]
