[package]
name = "fortanix-sgx-tools"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
Tools for building and running enclaves for the Fortanix SGX ABI.

This contains `ftxsgx-runner` to run generic `x86_64-fortanix-unknown-sgx`
enclaves, as well as `ftxsgx-elf2sgxs`, which is used in the build process for
the `x86_64-fortanix-unknown-sgx` target.
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "enclave", "ftxsgx-runner"]
categories = ["development-tools::build-utils", "command-line-utilities"]

[dependencies]
# Project dependencies
aesm-client = { version = "0.1.0", path = "../aesm-client", features = ["sgxs"] }
sgxs-loaders = { version = "0.1.0", path = "../sgxs-loaders" }
enclave-runner = { version = "0.1.0", path = "../enclave-runner" }
sgxs = { version = "0.6.0", path = "../sgxs" }
sgx-isa = { version = "0.3.0", path = "../sgx-isa" }

# External dependencies
xmas-elf = "0.6.0"         # Apache-2.0/MIT
clap = "2.2.5"             # MIT
failure = "0.1.1"          # MIT/Apache-2.0
failure_derive = "0.1.1"   # MIT/Apache-2.0
serde_derive = "1.0.84"    # MIT/Apache-2.0
serde = "1.0.84"           # MIT/Apache-2.0
toml = "0.4.10"            # MIT/Apache-2.0
num_cpus = "1.9.0"         # MIT/Apache-2.0
