[package]
name = "insecure-time"
version = "0.1.0"
edition = "2021"

[dependencies]
alloc = { version = "1.0.0", optional = true, package = "rustc-std-workspace-alloc" }
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }
compiler_builtins = { version = "0.1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }

[dev-dependencies]
rand = "0.8"

[features]
default = ["std", "clap"]
estimate_crystal_clock_freq = []
rustc-dep-of-std = ["alloc", "core", "compiler_builtins/rustc-dep-of-std"]
std = []

# Features only available during testing:
long_duration_tests = []
rdtsc_tests = []
