[package]
name = "ipc-queue"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
edition = "2018"
description = """
An implementation of FIFO queue described in fortanix-sgx-abi used for asynchronous usercalls.
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/api/ipc_queue/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "fifo", "queue", "ipc"]
categories = ["asynchronous"]

[dependencies]
fortanix-sgx-abi = { version = "0.4.0", path = "../intel-sgx/fortanix-sgx-abi" }

[dev-dependencies]
static_assertions = "1.1.0"

[target.'cfg(not(target_env = "sgx"))'.dev-dependencies]
futures = { version = "0.3", features = ["compat", "io-compat"] }
tokio = { version = "0.2", features = ["full"] }

[package.metadata.fortanix-sgx]
# set number of threads so tests can run properly
threads=120
