[package]
name = "libenclave-tools"
description = "Tools for building and linking enclaves using libenclave"
version = "0.1.3"
authors = ["Jethro Beekman <jethro@jbeekman.nl>"]
license = "GPL-2.0+"
repository = "https://github.com/jethrogb/sgx-utils/tree/master/libenclave-tools"

[[bin]]
name = "libenclave-elf2sgxs"
path = "src/elf2sgxs.rs"

[[bin]]
name = "cargo-build-enclave"
path = "src/cargo-build-enclave.rs"

[dependencies]
sgxs = { version = ">=0.4, <0.6", path = "../sgxs" }
sgx-isa = { version = "0.1", path = "../sgx-isa" }
xmas-elf = "0.3.0"         # Apache-2.0/MIT
clap = "2.2.5"             # MIT
rustc-serialize = "0.3.19" # MIT/Apache-2.0
libc = "0.2.9"             # MIT/Apache-2.0
num = "0.1.31"             # MIT/Apache-2.0
