[package]
name = "report-test"
version = "0.1.0"
authors = ["Fortanix, Inc."]
license = "MPL-2.0"
description = """
A simple interface to get a local SGX attestation (“report”).

This is useful for testing remote attestation.
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://edp.fortanix.com/docs/api/report_test/"
homepage = "https://edp.fortanix.com/"
keywords = ["sgx", "enclave", "attestation", "ereport"]
categories = ["development-tools"]

[dependencies]
# Project dependencies
"enclave-runner" = { version = "0.1.0", path = "../enclave-runner" }
"sgxs" = { version = "0.6.0", path = "../sgxs" }
"sgx-isa" = { version = "0.3.0", path = "../sgx-isa" }

# External dependencies
failure = "0.1.1"   # MIT/Apache-2.0
