[package]
name = "rs-libc"
version = "0.2.4"
authors = ["Fortanix, Inc."]
license-file = "LICENSE"
description = """
A subset of libc that can be used with Rust in freestanding environments.
"""
repository = "https://github.com/fortanix/rust-sgx"
documentation = "https://docs.rs/rs-libc/"
keywords = ["libc", "malloc", "strcmp", "snprintf"]
categories = ["external-ffi-bindings", "os"]

[build-dependencies]
cc = "1.0.94"

[dependencies]
zeroize = "1.7.0"
