[package]
name = "sgx-isa"
description = "Constants and structures related to the Intel SGX ISA extension"
version = "0.1.2"
authors = ["Jethro Beekman <jethro@jbeekman.nl>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/jethrogb/sgx-utils/tree/master/sgx-isa"

[dependencies]
"bitflags" = "0.5" # MIT/Apache-2.0

[features]
"try_from" = []
"large_array_derive" = []
