[package]
name = "sgx_pkix"
version = "0.1.4"
authors = ["Fortanix, Inc."]
edition = "2018"
license = "MPL-2.0"
repository = "https://github.com/fortanix/rust-sgx"
description = "TLS Certificate encoding and decoding helpers for the SGX environment."
keywords = [ "certificate-handling", "sgx" ]
categories = ["cryptography"]

[dependencies]
byteorder = "1.0"
pkix = ">=0.1.1, <0.3.0"
sgx-isa = "0.3"
quick-error = "1.1.0"
lazy_static = "1"
